--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^3.0.30",
     "@ai-sdk/react": "^3.0.99",
+    "@google/generative-ai": "^0.24.1",
     "ai": "^6.0.97",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
